2015-06-30  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac:
        * configure:
        * Headers/GNUstepBase/config.h.in:
        Add test for pthread_mutex_t.__data.__owner
        Update various tests to silence autoconf warnings.

2015-06-26 Riccardo Mottola <rm@gnu.org>

	* Source/NSMethodSignature.m
	* Source/cifframe.m
	Minor include fixes to avoid malloc.h warnings on OpenBSD.

	* Source/NSScanner.m
	Remove set but unused variable.

2015-06-22  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/Additions.h:
        * Headers/GNUstepBase/GSConfig.h.in:
        * Headers/GNUstepBase/GSVersionMacros.h:
        Minor tweaks to build and avoid warnings in Yosemite

2015-06-14 Riccardo Mottola <rm@gnu.org>

	* Headers/Foundation/NSData.h
	* Source/NSData.m
	base64EncodedDataWithOptions, base64EncodedStringWithOptions: first implementation

2015-06-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: be strict about '=' padding only occurring at end
	of base64 encoded data.

2015-06-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Use NSUInteger rather than unsigned, use memory
	management macros.
	* Source/NSConnection.m: Changes to avoid compiler warnings.
	* Headers/Foundation/NSData.h:
	* Source/NSData.m: add base64 initialisation methods (bug #45240)

2015-06-01 Riccardo Mottola <rm@gnu.org>

	* Headers/Foundation/NSArray.h
	* Source/NSArray.m
	Add firstObject: method existing since 10.6

2015-05-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLConnection.m: Fix leak of limit date
	* Source/NSXMLParser.m: Fix leak of string

2015-05-26: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Source/Additions/Unicode.m
	* Tools/AGSOutput.m
	  return NULL or nil instead of NO where pointers are to
	  be returned 

2015-05-26  Richard Frith-Macdonald <rfm@gnu.org>

	* GSString.m: Fix sign extension bug
	* Source/NSXMLParser.m: Update to more exactly match OSX behavior